<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CovidNews</string>
    <string name="facebook_app_id">243719987127959</string>
    <string name="fb_login_protocol_scheme">fb243719987127959</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="topbar_title">Covid-19</string>
    <string name="infobar_title">Are you feeling sick?</string>
    <string name="infobar_des">If you feel sick with any of covid-19 symptoms please call or SMS us immediately for help.</string>
    <string name="infobar_buttons_call">Call Now</string>
    <string name="infobar_buttons_sendsms">Send SMS</string>

    <string name="prevention_title">Prevention</string>
    <string name="prevention_avoid">Avoid close<br />  contact</string>
    <string name="prevention_clean">Clean your <br />  hands often</string>
    <string name="prevention_wear">Wear a <br /> facemask</string>
    <string name="test_text_title">Medical Declaration</string>
    <string name="test_text_des">Follow the instructions to declare your medical information.</string>

    <string name="statistic_vietnam">Vietnam</string>
    <string name="statistic_world">World</string>

    <string name="statistic_today">Today</string>
    <string name="statistic_total">Total</string>
    <string name="statistic_yesterday">Yesterday</string>
    <string name="statistic_2daysago">2 days ago</string>

    <string name="numbers_affected">Affected</string>
    <string name="numbers_death">Death</string>
    <string name="numbers_recovered">Recover</string>
    <string name="numbers_active">Active</string>
    <string name="numbers_serious">Serious</string>

    <string name="chart_title">Daily New Cases</string>

    <string name="newsitem_title">"NÓNG: Thanh niên nhập cảnh 'chui' ở quận 9 dương tính COVID-19</string>
    <string name="newsitem_des">"TTO - Nam thanh niên tên K. nhập cảnh 'chui' về quận 9, TP.HCM đã có kết quả xét nghiệm dương tính với COVID-19. Như vậy trong nhóm 6 người...</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>



    <string name="title_activity_settings">Settings</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="default_gallery_storage">My Videos</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="sms_phone">Default phone number</string>
    <string name="sms_content">Default sms content</string>
    <string name="key_sms_phone">key_sms_phone</string>
    <string name="key_sms_content">key_sms_content</string>

    <string name="default_sms_phone">03868866675</string>
    <string name="default_sms_content">Help meeeeeeeeeeee</string>


    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">We are a small team specialized in development of Android app. Glad that you use your product :heart:</string>
    <string name="app_version">1.1.0</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://covidnewsapi.herokuapp.com/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">h</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://covidnewsapi.herokuapp.com/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
</resources>