<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Covid-19"
        android:id="@+id/title"
        android:background="@color/maincolor"
        android:paddingLeft="@dimen/margin_left"
        android:paddingRight="@dimen/margin_right"
        style="@style/font_raleway_title"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:id="@+id/infobar"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_2corner"
        android:paddingLeft="@dimen/margin_left"
        android:paddingRight="@dimen/margin_right"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        >


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/font_raleway_h2"
                android:text="@string/infobar_title"
                android:textColor="@color/white"
                android:id="@+id/infobar_title"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infobar_des"
                style="@style/font_raleway_normal"
                android:textColor="@color/brown"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/infobar_title"
                android:id="@+id/infobar_des"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/infobar_des"
                android:id="@+id/infobar_buttons"
                android:layout_marginTop="16dp"
                >

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/infobar_buttons_call"
                    style="@style/font_raleway_h4"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:cornerRadius="@dimen/corner"
                    android:backgroundTint="@color/red"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:id="@+id/infobar_buttons_call"/>

                 <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/infobar_buttons_sendsms"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:cornerRadius="@dimen/corner"
                     android:textAllCaps="false"
                     style="@style/font_raleway_h4"
                    android:backgroundTint="@color/blue"
                    android:textColor="@color/white"
                    android:id="@+id/infobar_buttons_sendsms"/>




            </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/infobar"
        android:id="@+id/prevention"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/prevention_title"
            android:text="@string/prevention_title"
            style="@style/font_raleway_h2"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="3"
            app:layout_constraintTop_toBottomOf="@id/prevention_title"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/prevention_des"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/prevention_avoid"
                android:layout_weight="1"
                android:orientation="vertical">
                
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_avoid"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prevention_avoid"
                    android:layout_marginTop="10dp"
                    style="@style/font_raleway_textbold"
                    android:textAlignment="center"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/prevention_clean"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_clean"
                    android:layout_gravity="center"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/font_raleway_textbold"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/prevention_clean"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/prevention_wear"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_wearfacemask"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prevention_wear"
                    style="@style/font_raleway_textbold"
                    android:layout_marginTop="10dp"
                    android:textAlignment="center"
                    android:textColor="@color/black"/>

            </LinearLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/prevention"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:id="@+id/test"

        android:layout_marginTop="30dp"
        >



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_4corner"
            android:id="@+id/test_text"
            android:layout_marginTop="10dp"

            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="150dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/test_text_title"
                    android:text = "@string/test_text_title"
                    style="@style/font_raleway_h3"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/test_text_des"
                    android:text = "@string/test_text_des"
                    style="@style/font_raleway_normal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/brown"
                    />
            </LinearLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_nurse"
            android:id="@+id/test_image"
            android:layout_marginLeft="20dp"

            >

        </ImageView>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>