<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/maincolor"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:paddingLeft="@dimen/margin_left"
            android:paddingRight="@dimen/margin_right"
            >


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Statistic"
                android:id="@+id/title"
                style="@style/font_raleway_title"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:paddingBottom="20dp"
                />

            <com.google.android.material.button.MaterialButtonToggleGroup

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/statistic_toggle"
                android:gravity="center"
                app:singleSelection="true"
                android:padding="3dp"
                android:background="@drawable/bg_rounded_light"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:weightSum="2"
                app:layout_constraintTop_toBottomOf="@id/title">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/statistic_vietnam"
                    app:cornerRadius="20dp"
                    android:backgroundTint="@color/trans"
                    android:textColor="@color/black"
                    style="@style/font_raleway_textsemibold"
                    android:textAllCaps="false"
                    android:stateListAnimator="@null"
                    android:shadowColor="@color/trans"
                    android:layout_weight="1"
                    android:id="@+id/statistic_toggle_vietnam"/>
                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/trans"
                    android:stateListAnimator="@null"
                    style="@style/font_raleway_textbold"
                    android:textAllCaps="false"
                    app:cornerRadius="20dp"
                    android:text="@string/statistic_world"
                    android:shadowColor="@color/trans"
                    android:layout_weight="1"
                    android:id="@+id/statistic_toggle_world"/>



            </com.google.android.material.button.MaterialButtonToggleGroup>

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/statistic_toggle"
                app:flow_horizontalAlign="center"
                android:gravity="center"
                app:singleSelection="true"
                android:id="@+id/statistic_time">
                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/statistic_total"
                    android:backgroundTint="@color/trans"
                    android:stateListAnimator="@null"
                    style="@style/font_raleway_textbold"
                    android:textAllCaps="false"
                    android:shadowColor="@color/trans"
                    android:id="@+id/statistic_time_total"/>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/statistic_yesterday"
                    android:backgroundTint="@color/trans"
                    android:stateListAnimator="@null"
                    android:shadowColor="@color/trans"
                    style="@style/font_raleway_textbold"
                    android:textColor="@color/brown"
                    android:textAllCaps="false"
                    android:id="@+id/statistic_time_yesterday"/>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/font_raleway_textbold"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/trans"
                    android:textColor="@color/brown"
                    android:stateListAnimator="@null"
                    android:text="@string/statistic_2daysago"
                    android:id="@+id/statistic_time_2daysago"/>

            </com.google.android.material.button.MaterialButtonToggleGroup>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/numbers"
                android:layout_marginTop="17dp"
                app:layout_constraintTop_toBottomOf="@id/statistic_time">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/numbers_row1"
                    android:weightSum="2"
                    >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:background="@drawable/bg_rounded_yellow"
                        android:padding="10dp"
                        android:layout_marginRight="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/font_raleway_textbold"
                            android:textColor="@color/white"
                            android:text="@string/numbers_affected"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="..."
                            style="@style/font_h4"
                            android:textColor="@color/white"
                            android:layout_marginTop="25dp"
                            android:id="@+id/numbers_affected"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:background="@drawable/bg_rounded_red"
                        android:padding="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/font_raleway_textbold"
                            android:textColor="@color/white"
                            android:text="@string/numbers_death"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="..."
                            style="@style/font_h4"
                            android:textColor="@color/white"
                            android:layout_marginTop="25dp"
                            android:id="@+id/numbers_death"
                            />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@id/numbers_row1"
                    android:id="@+id/numbers_row2"
                    android:layout_marginTop="10dp"
                    android:weightSum="3"
                    >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:background="@drawable/bg_rounded_green"
                        android:padding="10dp"
                        android:layout_marginRight="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/font_raleway_textbold"
                            android:textColor="@color/white"
                            android:text="@string/numbers_recovered"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="..."
                            style="@style/font_h4"
                            android:textColor="@color/white"
                            android:layout_marginTop="25dp"
                            android:id="@+id/numbers_recovered"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:background="@drawable/bg_rounded_blue"
                        android:padding="10dp"
                        android:layout_marginRight="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/font_raleway_textbold"
                            android:textColor="@color/white"
                            android:text="@string/numbers_active"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="..."
                            style="@style/font_h4"
                            android:textColor="@color/white"
                            android:layout_marginTop="25dp"
                            android:id="@+id/numbers_active"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:background="@drawable/bg_rounded_violet"
                        android:padding="10dp"

                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/font_raleway_textbold"
                            android:textColor="@color/white"
                            android:text="@string/numbers_serious"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="..."
                            style="@style/font_h4"
                            android:textColor="@color/white"
                            android:layout_marginTop="25dp"
                            android:id="@+id/numbers_serious"
                            />

                    </LinearLayout>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:paddingTop="25dp"
            android:background="@drawable/bg_rounded_2corner_white"
            android:paddingLeft="@dimen/margin_left"
            android:paddingRight="@dimen/margin_right"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:id="@+id/chart">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/font_raleway_title"
                android:textColor="@color/black"
                android:text="@string/chart_title"/>

            <com.github.mikephil.charting.charts.BarChart
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:minHeight="200dp"
                android:id="@+id/chart_mainchart"
                android:layout_height="wrap_content"/>


        </LinearLayout>

    </LinearLayout>

</ScrollView>